# clean_sf

./: .env  .gitignore  REINFORCE.py  baseline.py  common.py  hello.py  pyproject.toml  sf.py
baseline/: agent.py  args.py  main.py
cascade/: agent.py  args.py  main.py
runs/LunarLanderContinuous-v2__baseline__1__1736863175/: events.out.tfevents.1736863179.Development-L-2020-0006.960868.0
runs/LunarLanderContinuous-v2__baseline__1__1736863367/: events.out.tfevents.1736863371.Development-L-2020-0006.961854.0
runs/LunarLanderContinuous-v2__baseline__1__1736863438/: events.out.tfevents.1736863442.Development-L-2020-0006.962063.0
src/clean_sr/: JOURNAL.md  __init__.py
src/clean_sr/baseline/: agent.py  args.py  main.py
src/clean_sr/cascade/: agent.py  args.py  main.py
src/clean_sr/sr/: agent.py  args.py  main.py  sf.py  test_compute_returns.py  test_training_step.py  train_an_sr.py
wandb/: latest-run
wandb/run-20250114_225938-jsrjswxr/: run-jsrjswxr.wandb
wandb/run-20250114_225938-jsrjswxr/files/: config.yaml  events.out.tfevents.1736863179.Development-L-2020-0006.960868.0  wandb-metadata.json
wandb/run-20250114_230250-vslwii1q/: run-vslwii1q.wandb
wandb/run-20250114_230250-vslwii1q/files/: config.yaml  events.out.tfevents.1736863371.Development-L-2020-0006.961854.0  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250114_230401-8td2wrwk/: run-8td2wrwk.wandb
wandb/run-20250114_230401-8td2wrwk/files/: config.yaml  events.out.tfevents.1736863442.Development-L-2020-0006.962063.0  wandb-metadata.json  wandb-summary.json
(+2 files in other folders)
