[project]
name = "clean_sr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["src"]
#include = ["clean_sr*"]
#exclude = ["tests*", "tests.*"]
